# decorators

./: .gitignore  pyproject.toml  python.sh  pythonsh.toml
releases/: python.sh-0.1.1  python.sh-0.2.0  python.sh-0.3.0
src/decorator/: json.py  logging.py
tests/: manual.py  test_class.py  test_decorator.py  test_formatter.py  test_nested.py
